4-Kubernetes/5-helm-demo-proj/helm-mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mongo-express-deployment
 labels:
  app: mongo-express
spec:
 replicas: 1
 selector:
  matchLabels:
   app: mongo-express
 template:
  metadata:
   labels:
    app: mongo-express
  spec:
   containers:
   - name: mongo-express
     image: mongo-express
     ports:
     - containerPort: 8081
