4-Kubernetes/5-helm-demo-proj/helm-mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: mongo-express-service
spec:
 selector:
  app: mongo-express
 ports:
 - protocol: TCP
   port: 8081
   targetPort: 8081
