4-Kubernetes/5-helm-demo-proj/ingress-rules.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
    
  annotations:

    kubernetes.io/ingress.class: nginx


  name: nginx-ingress

spec:

  rules:

  - host: myapp.com

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: mongo-express-service

            port:

              number: 8081
